feat: add cors and update swagger for password reset
